[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Door/door_sprite.png" type="Texture" id=1]
[ext_resource path="res://SFX/doorOpen_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://SFX/doorClose_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Items/Door.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 42 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 10 )

[sub_resource type="OccluderPolygon2D" id=3]
closed = false
polygon = PoolVector2Array( -32.0812, -9.53263, 32.741, -9.25202, 32.3201, 9.82984, -32.5021, 9.54922 )

[sub_resource type="Animation" id=4]
resource_name = "Open"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("door_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 0 ), Vector2( -64, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0, 4 )
}

[node name="Door" type="Area2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
shape = SubResource( 1 )

[node name="door_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="door_sprite"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_sprite/StaticBody2D"]
visible = false
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="door_sprite"]
occluder = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Door_input_event"]
